--- a/s1_introduction.tex
+++ b/s1_introduction.tex
@@ -1,3 +1,5 @@
+%!TEX root = cvl_bachelor_thesis.tex
+
 %----------------------------------------------
 % Introduction
 %----------------------------------------------
@@ -32,8 +34,10 @@ Da sich die verschiedenen Resourcen qualitativ sehr stark voneinander unterschei
 Die Suchanfrage kann in textueller Form oder als Bild-Query sowie als Kombination von beidem gestellt werden.
 Ein weiteres wichtiges Feature hierbei ist die multilinguale Suche, da die Menge an verfügbaren medizinischen Informationen nicht in alle Sprachen gleich ist.
 Dies bedeutet dass die Suchanfrage in mehrere Sprachen übersetzt wird und somit auch anderssprachige Quellen durchsucht werden können.
-Die Zusammenfassungen der Suchergebnisse werden anschließend in die Anfragesprache rückübersetzt, 
-wodurch der Benutzer schnell durch die Ergebnissliste navigieren kann \cite{kres}.
+Die \Rd{Zusammenfassungen der} Suchergebnisse werden anschließend in die Anfragesprache rückübersetzt, 
+wodurch der Benutzer schnell durch die Ergebnissliste \R{manchmal} navigieren kann \cite{kres}.
+
+\Rc{ein comment}
 
 %----------------------------------------------
 % ** Interaktion mit einer Bildsuchmaschiene
