--- a/s3_methodology.tex
+++ b/s3_methodology.tex
@@ -1,3 +1,5 @@
+%!TEX root = cvl_bachelor_thesis.tex
+
 %-------------------------------------------------------
 % Methodology
 %-------------------------------------------------------
