--- a/s2_related-work.tex
+++ b/s2_related-work.tex
@@ -90,7 +90,7 @@ so wird beim navigieren\Rc{N...}  durch das Volume in einem Fenster die Position
 \begin{figure}[t]
 	\centering
 	\includegraphics[width=0.8\linewidth]{img/c2_osirix_2d_view_splitscreen.jpg}
-	\caption{Darstellung eines Volumes aus zwei verschiedenen Orientrierungen. Die Schnittposition des linken Bildes wird im rechten als grüne Linie dargestellt.}
+	\caption{Darstellung eines Volumes aus zwei verschiedenen Orientrierungen. Die Schnittposition des linken Bildes wird im rechten als grüne Linie dargestellt.\Rc{alle bilder müssen auch im text erwähnt und verlinkt sein} }
 \end{figure}
 
 %----------------------------------------------
